# rusty_pregel

./: Cargo.toml  Makefile  README.md
crates/pregel-abi/src/: types.rs
crates/pregel-checkpoint/: Cargo.toml  README.md
crates/pregel-checkpoint/src/: checkpoint_manager.rs  lib.rs  recovery.rs  snapshot.rs
crates/pregel-cli/: Cargo.toml  README.md
crates/pregel-cli/src/: main.rs
crates/pregel-common/: Cargo.toml  README.md
crates/pregel-common/src/: config.rs  errors.rs  lib.rs  serialization.rs  types.rs
crates/pregel-coordinator/: Cargo.toml  README.md  build.rs
crates/pregel-coordinator/src/: barrier.rs  coordinator.rs  grpc.rs  job_manager.rs  lib.rs  worker_registry.rs
crates/pregel-core/: Cargo.toml  README.md
crates/pregel-core/src/: aggregator.rs  algo.rs  lib.rs  partition.rs  runtime.rs  scheduler.rs  superstep.rs
crates/pregel-messaging/: Cargo.toml  README.md
crates/pregel-messaging/src/: lib.rs  message_batch.rs  protocol.rs
crates/pregel-observability/: Cargo.toml
crates/pregel-observability/src/: lib.rs
crates/pregel-sdk/: Cargo.toml  README.md
crates/pregel-sdk/src/: aggregator.rs  context.rs  lib.rs  message.rs  program.rs  vertex.rs  wasm_export.rs  wire.rs
crates/pregel-storage/: Cargo.toml  README.md
crates/pregel-storage/src/: graph.rs  graph_loader.rs  lib.rs  partitioner.rs  vertex_store.rs
crates/pregel-wasm/: Cargo.toml  README.md
crates/pregel-wasm-algos/: Cargo.toml
crates/pregel-wasm-algos/src/: lib.rs
crates/pregel-wasm/src/: engine.rs  lib.rs  module.rs
crates/pregel-wasm/tests/: wasm_as_cc_smoke.rs  wasm_cc_smoke.rs
crates/pregel-worker/: Cargo.toml  README.md  build.rs
crates/pregel-worker/benches/: superstep.rs
crates/pregel-worker/src/: coordinator_client.rs  lib.rs  native_algo.rs  transport.rs  transport_quic.rs  worker.rs
crates/pregel-worker/src/execution/: executor.rs  mod.rs  vertex_loop.rs
crates/pregel-worker/src/messaging/: inbox.rs  mod.rs  outbox.rs  router.rs
crates/pregel-worker/src/partition/: mod.rs  partition_manager.rs
crates/pregel-worker/tests/: algo_messages.rs
docs/: ABI_SPEC.md  ARCHITECTURE.md  BSP_ROLLBACK.md  CC_ANALYSIS.md  CLI_REFERENCE.md  FAQ_AND_TROUBLESHOOTING.md  INTEGRATION_GUIDE.md  ROADMAP.md  SDK_ARCHITECTURE.md  SDK_CAPABILITY_MATRIX.md  SESSION_ARCHITECTURE.md  TCP_VS_QUIC_ANALYSIS.md  TESTING.md  TEST_SDKS.md  WASM_ABI.md
examples/connected_components/: Cargo.toml
examples/connected_components/src/: main.rs
examples/data/: multi_cc.graph  sample.graph
examples/pagerank/: Cargo.toml  README.md
examples/pagerank/src/: main.rs
examples/shortest_path/: Cargo.toml
examples/shortest_path/src/: main.rs
proto/: coordinator.proto
scripts/: build-all-sdks.sh  build-wasm.sh  test-sdks.sh
sdk/assemblyscript/: .gitignore  README.md  package-lock.json  package.json
sdk/assemblyscript/assembly/: index.ts
sdk/go/: README.md  abi.go  go.mod  program.go  vertex.go
sdk/typescript/: README.md  package-lock.json  package.json  test-cc.cjs.js  test-cc.ts
sdk/typescript/src/: index.ts
