[package]
name = "pregel-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pregel"
path = "src/main.rs"

[dependencies]
pregel-common = { path = "../pregel-common" }
pregel-coordinator = { path = "../pregel-coordinator" }
pregel-worker = { path = "../pregel-worker" }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt", "sync"] }
